--- a/settings.ini
+++ b/settings.ini
@@ -3,17 +3,17 @@
 # See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
 
 ### Python library ###
-repo = nbdev_beautiful
+repo = TODO
 lib_name = %(repo)s
 version = 0.0.1
 min_python = 3.7
 license = apache2
-black_formatting = False
+black_formatting = True
 
 ### nbdev ###
 doc_path = docs
-lib_path = nbdev_beautiful
-nbs_path = nbs
+lib_path = _proc
+nbs_path = nbdev/nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
@@ -28,14 +28,14 @@ title = %(lib_name)s
 
 ### PyPI ###
 audience = Developers
-author = Trung
-author_email = hoangtrung020541@gmail.com
+author = TODO
+author_email = TODO
 copyright = 2023 onwards, %(author)s
-description = This is a basic tutorial on how to use nbdev to create beautiful web pages
-keywords = nbdev jupyter notebook python
+description = TODO
+keywords = TODO TODO TODO TODO
 language = English
 status = 3
-user = hoangtrung020541
+user = TODO
 
 ### Optional ###
 # requirements = fastcore pandas
